Added title/alt label to all images and links

--- a/app/views/notFoundPage.scala.html
+++ b/app/views/notFoundPage.scala.html
@@ -25,7 +25,7 @@
                 Sorry, but the page you are looking for has not been found.<br>
                 Please check the URL (in the top of your browser) for any obvious errors.
                 <br><br>
-                <a href="web">Click here to return the Horsley Parish Home Page</a>
+                <a href="web" title="Link to return to main home page">Click here to return the Horsley Parish Home Page</a>
               </div>
             </div>
 
